issue #11 - GET travelode integrated
